Fix the substitution of abbreviations

Thanks to Amaro!

BUG: 374016